--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,9 @@
     <section class="section">
       Top section
     </section>
-  </main>
+    <section class="section">
+      Bottom section
+    </section>  </main>
   <footer class="footer">
     Footer
   </footer>
